add color swapper

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     </head>
 
     <body style="positive:relative;">
-        <canvas id="canvas"></canvas>
+        <canvas style="z-index:1" id="color-bar"></canvas>
+        <canvas style="z-index:0" id="canvas"></canvas>
         <script type="text/javascript" src="draw_nothing.js"></script>
     </body>
 </html>
