add img with data url of canvas to be savable

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <body style="positive:relative;">
         <canvas style="z-index:1" id="color-bar"></canvas>
         <canvas style="z-index:0" id="canvas"></canvas>
+
+        <img id="canvas-img"></img>
+
         <script type="text/javascript" src="draw_nothing.js"></script>
     </body>
 </html>
