--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+        <title>Draw Nothing</title>
+        <link rel='stylesheet' type='text/css' href='base.css' />
+        <link rel='stylesheet' type='text/css' href='sticky_footer.css' />
+        <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js' type='text/javascript'></script>
     </head>
 
-    <body style="positive:relative;">
-        <canvas style="z-index:1" id="color-bar"></canvas>
-        <canvas style="z-index:0" id="canvas"></canvas>
+    <body style='positive:relative;'>
 
-        <img id="canvas-img"></img>
+        <div id='wrap'>
+            <div id='main'>
+                <canvas style='z-index:0' id='color-bar'></canvas>
+                <canvas style='z-index:1' id='canvas'></canvas>
+                <img width=0 height=0 id='canvas-img'></img>
+            </div>
+        </div>
 
-        <script type="text/javascript" src="draw_nothing.js"></script>
+        <div id='footer'>
+            DRAW SOMETHING
+        </div>
+
+        <script type='text/javascript' src='draw_nothing.js'></script>
     </body>
 </html>
