--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
 
         <div id='footer'>
-            DRAW SOMETHING
+            DRAW NOTHING
         </div>
 
         <script type='text/javascript' src='draw_nothing.js'></script>
