--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Draw Nothing</title>
-        <link rel='stylesheet' type='text/css' href='base.css' />
-        <link rel='stylesheet' type='text/css' href='sticky_footer.css' />
+        <link rel='stylesheet' type='text/css' href='css/base.css' />
+        <link rel='stylesheet' type='text/css' href='css/sticky_footer.css' />
         <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js' type='text/javascript'></script>
     </head>
 
