--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Draw Nothing</title>
         <link rel='stylesheet' type='text/css' href='css/base.css' />
         <link rel='stylesheet' type='text/css' href='css/sticky_footer.css' />
+        <link rel='stylesheet' type='text/css' href='css/font-awesome.css' />
         <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js' type='text/javascript'></script>
     </head>
 
@@ -18,7 +19,10 @@
         </div>
 
         <div id='footer'>
-            DRAW NOTHING
+            <div id='footer-container'>
+               <i class="icon-pencil"></i>
+                DRAW NOTHING
+            </div>
         </div>
 
         <script type='text/javascript' src='draw_nothing.js'></script>
