--- a/index.html
+++ b/index.html
@@ -5,23 +5,35 @@
         <link rel='stylesheet' type='text/css' href='css/base.css' />
         <link rel='stylesheet' type='text/css' href='css/sticky_footer.css' />
         <link rel='stylesheet' type='text/css' href='css/font-awesome.css' />
-        <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js' type='text/javascript'></script>
+        <link rel='stylesheet' type="text/css" href="css/jquery-ui-1.8.20.custom.css" />
+
+        <script type="text/javascript" src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'></script>
+		<script type="text/javascript" src="js/jquery-ui-1.8.20.custom.min.js"></script>
     </head>
 
-    <body style='positive:relative;'>
+    <body style='position:relative;'>
 
         <div id='wrap'>
             <div id='main'>
                 <canvas style='z-index:0' id='color-bar'></canvas>
-                <canvas style='z-index:1' id='canvas'></canvas>
+                <canvas style='z-index:-1' id='canvas'></canvas>
                 <img width=0 height=0 id='canvas-img'></img>
             </div>
         </div>
 
         <div id='footer'>
             <div id='footer-container'>
+                <div style='float:left;'>
+                    <i class='icon-tint brush'></i>
+                    <!-- <div id='slider' style='display:inline-block;'></div> -->
+                </div>
+
                <i class="icon-pencil"></i>
-                DRAW NOTHING
+               DRAW NOTHING
+
+                <div style='float:left;'>
+                    <i class='icon-tint brush'></i>
+                </div>
             </div>
         </div>
 
