--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                <i class="icon-pencil"></i>
                DRAW NOTHING
 
-                <div style='float:left;'>
-                    <i class='icon-tint brush'></i>
+                <div style='float:right;'>
+                    <i id='url-loader' class='icon-picture'></i>
                 </div>
             </div>
         </div>
