--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <div id='footer-container'>
                 <div style='float:left;'>
                     <i class='icon-tint brush'></i>
-                    <!-- <div id='slider' style='display:inline-block;'></div> -->
+                    <i class='icon-minus brush-smaller'></i>
+                    <i class='icon-plus brush-larger'></i>
                 </div>
 
                <i class="icon-pencil"></i>
