add buttons to change brush size

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <div id='footer'>
             <div id='footer-container'>
                 <div style='float:left;'>
-                    <i class='icon-tint brush'></i>
-                    <i class='icon-minus brush-smaller'></i>
-                    <i class='icon-plus brush-larger'></i>
+                    <i id='brush-icon' class='icon-tint'></i>
+                    <i id='brush-smaller' class='icon-minus'></i>
+                    <i id='brush-larger' class='icon-plus'></i>
                 </div>
 
                <i class="icon-pencil"></i>
