move js into js folder. attempt at adding touch events

--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
             </div>
         </div>
 
-        <script type='text/javascript' src='draw_nothing.js'></script>
+        <script type='text/javascript' src='js/draw_nothing.js'></script>
     </body>
 </html>
