disable scrolling/zooming on mobile devices, support background colors as fallback to gradients, better fit to screen

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <link rel='stylesheet' type="text/css" href="css/jquery-ui-1.8.20.custom.css" />
 
         <script type="text/javascript" src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'></script>
-		<script type="text/javascript" src="js/jquery-ui-1.8.20.custom.min.js"></script>
+        <script type="text/javascript" src="js/jquery-ui-1.8.20.custom.min.js"></script>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     </head>
 
     <body style='position:relative;'>
