center color picker, work on brush selector widget

--- a/index.html
+++ b/index.html
@@ -34,14 +34,17 @@
                 </div>
                 <canvas style='z-index:-1' id='canvas'></canvas>
                 <img width=0 height=0 id='canvas-img'></img>
-                <div id="right-panel"></div>
+                <div id="right-panel">
+                    <div id="brush-picker">
+                        <div class="brush-thumb" id="pencilPoint"><p>Pencil</p></div>
+                    </div>
+                </div>
             </div>
         </div>
 
         <div id='footer'>
             <div id='footer-container'>
                 <div style='float:left;'>
-                    <i id='brush-icon' class='icon-tint'></i>
                     <i id='brush-smaller' class='icon-minus'></i>
                     <i id='brush-larger' class='icon-plus'></i>
                 </div>
