brush opacity implementation

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
                             <div class="slider" id="brushSizer"></div>
                             <p class="slider-val" id="brushSize"></p>
                         </div>
+                        <div class="brush-option">
+                            <p class="option-header">Brush Opacity</p>
+                            <div class="slider" id="brushOpacityer"></div>
+                            <p class="slider-val" id="brushOpacity"></p>
+                        </div>
                     </div>
                 </div>
 
