--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                 </div>
 
-                <canvas id='canvas'></canvas>
+                <div id="canvas-wrap"><canvas id='canvas'></canvas></div>
                 <img width=0 height=0 id='canvas-img'></img>
 
             </div>
