footer buttons for mobile

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <link rel='stylesheet' type='text/css' href='css/base.css' />
         <link rel='stylesheet' type='text/css' href='css/sticky_footer.css' />
         <link rel='stylesheet' type='text/css' href='css/font-awesome.css' />
-        <link rel='stylesheet' type="text/css" href="css/jquery-ui-1.8.21.custom.css" />
-        <link rel='stylesheet' type="text/css" href="css/color-picker.css" />
+        <link rel='stylesheet' type='text/css' href='css/jquery-ui-1.8.21.custom.css' />
+        <link rel='stylesheet' type='text/css' href='css/color-picker.css' />
 
-        <script type="text/javascript" src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'></script>
-        <script type="text/javascript" src="js/jquery-ui-1.8.21.custom.min.js"></script>
-        <script type="text/javascript" src="js/colorpicker.min.js"></script>
+        <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'></script>
+        <script type='text/javascript' src='js/jquery-ui-1.8.21.custom.min.js'></script>
+        <script type='text/javascript' src='js/colorpicker.min.js'></script>
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no'>
     </head>
 
     <body style='position:relative;'>
@@ -20,36 +20,36 @@
         <div id='wrap'>
             <div id='main'>
 
-                <div id="left-panel">
-                    <div class="cp-default color-picker">
-                        <div class="picker-wrapper">
-                            <div id="picker" class="picker">
-                                <div class="picker-indicator"></div>
+                <div id='left-panel'>
+                    <div class='cp-default color-picker'>
+                        <div class='picker-wrapper'>
+                            <div id='picker' class='picker'>
+                                <div class='picker-indicator'></div>
                             </div>
-                            <div class="slide-wrapper">
-                                <div id="slide" class="slide"></div>
-                                <div class="slide-indicator"></div>
+                            <div class='slide-wrapper'>
+                                <div id='slide' class='slide'></div>
+                                <div class='slide-indicator'></div>
                             </div>
                         </div>
                     </div>
-                    <div id="brush-picker">
-                        <div class="brush-thumb" id="pencilPoint"><p>Pencil</p></div>
+                    <div id='brush-picker'>
+                        <div class='brush-thumb' id='pencilPoint'><p>Pencil</p></div>
                     </div>
-                    <div id="brush-options">
-                        <div class="brush-option">
-                            <p class="option-header">Brush Size</p>
-                            <div class="slider" id="brushSizer"></div>
-                            <p class="slider-val" id="brushSize"></p>
+                    <div id='brush-options'>
+                        <div class='brush-option'>
+                            <p class='option-header'>Brush Size</p>
+                            <div class='slider' id='brushSizer'></div>
+                            <p class='slider-val' id='brushSize'></p>
                         </div>
-                        <div class="brush-option">
-                            <p class="option-header">Brush Opacity</p>
-                            <div class="slider" id="brushOpacityer"></div>
-                            <p class="slider-val" id="brushOpacity"></p>
+                        <div class='brush-option'>
+                            <p class='option-header'>Brush Opacity</p>
+                            <div class='slider' id='brushOpacityer'></div>
+                            <p class='slider-val' id='brushOpacity'></p>
                         </div>
                     </div>
                 </div>
 
-                <div id="canvas-wrap"><canvas id='canvas'></canvas></div>
+                <div id='canvas-wrap'><canvas id='canvas'></canvas></div>
                 <img width=0 height=0 id='canvas-img'></img>
 
             </div>
@@ -57,12 +57,19 @@
 
         <div id='footer'>
             <div id='footer-container'>
+                <div style='float:left;'>
+                    <span class='footer-button'>
+                        <i id='color-picker-button' class='footer-icon icon-tint'></i>
+                    </span>
+                </div>
 
-               <i class="icon-pencil"></i>
-               DRAW NOTHING
+                <i class='footer-icon icon-pencil'></i>
+                DRAW NOTHING
 
                 <div style='float:right;'>
-                    <i id='url-loader' class='icon-picture'></i>
+                    <span class='footer-button'>
+                        <i id='url-loader' class='footer-icon icon-picture'></i>
+                    </span>
                 </div>
             </div>
         </div>
