brush selector menu, toggle visibilities

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                             </div>
                         </div>
                     </div>
+                    <div id='brush-picker-menu' class='menu-item'>
+                        <div class='brush-thumb' id='pencilPoint'><p>Pencil</p></div>
+                    </div>
                 </div>
 
                 <div id='left-panel'>
@@ -75,9 +78,11 @@
                     <span id='color-picker-button' class='footer-button'>
                         <i id='color-picker-icon' class='footer-icon icon-tint'></i>
                     </span>
+                    <span id='brush-picker-button' class='footer-button'>
+                        <i id='brush-picker-icon' class='footer-icon icon-pencil'></i>
+                    </span>
                 </div>
 
-                <i class='footer-icon icon-pencil'></i>
                 DRAW NOTHING
 
                 <div style='float:right;'>
