tweak the responsive js, gradients

--- a/index.html
+++ b/index.html
@@ -75,15 +75,13 @@
         <div id='footer'>
             <div id='footer-container'>
                 <div style='float:left;'>
-                    <span id='color-picker-button' class='footer-button'>
+                    <a id='color-picker-button' class='footer-button'>
                         <i id='color-picker-icon' class='footer-icon icon-tint'></i>
-                    </span>
-                    <span id='brush-picker-button' class='footer-button'>
+                    </a>
+                    <a id='brush-picker-button' class='footer-button'>
                         <i id='brush-picker-icon' class='footer-icon icon-pencil'></i>
-                    </span>
+                    </a>
                 </div>
-
-                DRAW NOTHING
 
                 <div style='float:right;'>
                     <span id='img-loader-button' class='footer-button'>
