brush options menu

--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
                     <div id='brush-picker-menu' class='menu-item'>
                         <div class='brush-thumb' id='pencilPoint'><p>Pencil</p></div>
                     </div>
+                    <div id='brush-options-menu' class='menu-item'>
+                        <div class='brush-option-menu'>
+                            <p class='option-header-menu'>Brush Size</p>
+                            <div class='slider' id='brushSizerMenu'></div>
+                            <p class='slider-val slider-val-menu' id='brushSizeMenu'></p>
+                        </div>
+                        <div class='brush-option-menu'>
+                            <p class='option-header-menu'>Brush Opacity</p>
+                            <div class='slider' id='brushOpacityerMenu'></div>
+                            <p class='slider-val slider-val-menu' id='brushOpacityMenu'></p>
+                        </div>
+                    </div>
                 </div>
 
                 <div id='left-panel'>
@@ -80,6 +92,9 @@
                     </a>
                     <a id='brush-picker-button' class='footer-button'>
                         <i id='brush-picker-icon' class='footer-icon icon-pencil'></i>
+                    </a>
+                    <a id='brush-options-button' class='footer-button'>
+                        <i id='brush-picker-icon' class='footer-icon icon-tasks'></i>
                     </a>
                 </div>
 
