mess with gradients

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                         <div class='brush-option-menu'>
                             <p class='option-header-menu'>Brush Size</p>
                             <div class='slider' id='brushSizerMenu'></div>
-                            <p class='slider-val slider-val-menu' id='brushSizeMenu'></p>
-                        </div>
+                            <p class='slider-val-menu' id='brushSizeMenu'></p>
+                        </div><hr>
                         <div class='brush-option-menu'>
                             <p class='option-header-menu'>Brush Opacity</p>
                             <div class='slider' id='brushOpacityerMenu'></div>
-                            <p class='slider-val slider-val-menu' id='brushOpacityMenu'></p>
-                        </div>
+                            <p class='slider-val-menu' id='brushOpacityMenu'></p>
+                        </div><hr>
                     </div>
                 </div>
 
