mobile colir picker, firefox edge case, no show app until rendered, change breakdown resolutions

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script type='text/javascript' src='js/jquery-ui-1.8.21.custom.min.js'></script>
         <script type='text/javascript' src='js/raphael-1.3.1-min.js'></script>
         <script type='text/javascript' src='js/colorwheel.js'></script>
+        <script type='text/javascript' src='js/canvascolorpicker.min.js'></script>
 
         <meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no'>
     </head>
