--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
 
                 <div id='menu'>
                     <div id='color-picker-menu' class='menu-item'>
+                        <h3>Color Palette</h3>
                         <div id='colorwheel-menu' class='colorwheel'></div>
                     </div>
                     <div id='brush-picker-menu' class='menu-item'>
+                        <h3>Brush Set</h3>
                         <div class='brush-thumb' id='pencilPoint'><p>Pencil</p></div>
                     </div>
                     <div id='brush-options-menu' class='menu-item'>
+                        <h3>Brush Options</h3>
                         <div class='brush-option-menu'>
                             <p class='option-header-menu'>Brush Size</p>
                             <div class='slider' id='brushSizerMenu'></div>
