--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
         <div id='wrap'>
             <div id='main'>
+                <div id="mobile-header">Draw Nothing</div>
 
                 <div id='menu'>
                     <div id='color-picker-menu' class='menu-item'>
@@ -46,6 +47,7 @@
                 </div>
 
                 <div id='left-panel'>
+                    <h3>Draw Nothing</h3>
                     <div id='colorwheel' class='colorwheel'></div>
                     <div id='brush-picker'>
                         <div class='brush-thumb' id='pencilPoint'><p>Pencil</p></div>
