add manifest to html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="/.cache.manifest">
     <head>
         <title>Draw Nothing</title>
         <link rel='stylesheet' type='text/css' href='css/base.css' />
