--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel='stylesheet' type='text/css' href='css/sticky_footer.css' />
         <link rel='stylesheet' type='text/css' href='css/font-awesome.css' />
         <link rel='stylesheet' type="text/css" href="css/jquery-ui-1.8.20.custom.css" />
+        <link rel='icon' type="image/x-icon" href="img/icon-16.png" />
 
         <script type="text/javascript" src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'></script>
         <script type="text/javascript" src="js/jquery-ui-1.8.20.custom.min.js"></script>
